--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-DB_HOST=database-1.cu186q46otew.us-east-1.rds.amazonaws.com
+DB_HOST=mysql
 DB_USERNAME=admin
-DB_PASSWORD="admin123"
+DB_PASSWORD=Devops123
 PORT=3306
