--- a/kubernetes-files/backend-deployment.yaml
+++ b/kubernetes-files/backend-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image: 342547628707.dkr.ecr.us-east-1.amazonaws.com/backend:7
+        image: 342547628707.dkr.ecr.us-east-1.amazonaws.com/backend:latest
         ports:
         - containerPort: 80
         env:
