--- a/kubernetes-files/secret.yaml
+++ b/kubernetes-files/secret.yaml
@@ -2,8 +2,10 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: db-secret
+  namespace: default  # optional, adjust to your app namespace
 type: Opaque
 data:
-  db_host: n$
-  db_username: i٢
-  db_password: v
+  db_host: Ym9vay5yZHMuY29t        # "book.rds.com"
+  db_username: YWRtaW4=           # "admin"
+  db_password: RGV2b3BzMTIz       # "Devops123"
+
