--- a/kubernetes-files/secret.yaml
+++ b/kubernetes-files/secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: db-secret
-  namespace: default  # optional, adjust to your app namespace
+  namespace: default  # optional, adjust to your app namespace #
 type: Opaque
 data:
   db_host: Ym9vay5yZHMuY29t        # "book.rds.com"
