--- a/kubernetes-files/secret.yaml
+++ b/kubernetes-files/secret.yaml
@@ -2,9 +2,10 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: db-secret
-  namespace: default  # change to your actual namespace if needed
+  namespace: default
 type: Opaque
 data:
-  DB_HOST: Ym9vay5yZHMuY29t          # book.rds.com
-  DB_USERNAME: YWRtaW4=              # admin
-  DB_PASSWORD: RGV2b3BzMTIz          # Devops123
+  db_host: Ym9vay5yZHMuY29t      # book.rds.com
+  db_username: YWRtaW4=          # admin
+  db_password: RGV2b3BzMTIz      # Devops123
+  port: MzMwNg==                 # 3306
