--- a/kubernetes-files/secret.yaml
+++ b/kubernetes-files/secret.yaml
@@ -2,10 +2,9 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: db-secret
-  namespace: dev
+  namespace: default  # ✅ Match backend namespace
 type: Opaque
 data:
-  db_host: Ym9vay5yZHMuY29t      # base64 for "book.rds.com"
-  db_username: YWRtaW4=          # base64 for "admin"
-  db_password: RGV2b3BzMTIz      # base64 for "Devops123"
-  
+  db_host: Ym9vay5yZHMuY29t
+  db_username: YWRtaW4=
+  db_password: RGV2b3BzMTIz
