--- a/kubernetes-files/backend-deployment.yaml
+++ b/kubernetes-files/backend-deployment.yaml
@@ -1,30 +1,11 @@
-apiVersion: v1
-kind: Secret
-metadata:
-  name: db-secret
-type: Opaque
-stringData:
-  db_host: book.rds.com
-  db_username: admin
-  db_password: Devops123
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: db-config
-data:
-  DB_PORT: "3306"
-  DB_NAME: your_database_name_here
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: backend
-  namespace: default
   labels:
     app: backend
 spec:
-  replicas: 2
+  replicas: 3
   selector:
     matchLabels:
       app: backend
@@ -35,7 +16,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image: 342547628707.dkr.ecr.us-east-1.amazonaws.com/backend:latest
+        image: 843756393997.dkr.ecr.ap-south-1.amazonaws.com/backend:latest
         ports:
         - containerPort: 80
         env:
@@ -49,11 +30,6 @@ spec:
             secretKeyRef:
               name: db-secret
               key: db_username
-        - name: DB_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: db-secret
-              key: db_password
         - name: DB_PORT
           valueFrom:
             configMapKeyRef:
@@ -64,5 +40,10 @@ spec:
             configMapKeyRef:
               name: db-config
               key: DB_NAME
+        - name: DB_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: db-secret
+              key: db_password
         - name: PORT
-          value: "80"
+          value: "3306"  # Adjust if necessary
