--- a/kubernetes-files/configmap.yaml
+++ b/kubernetes-files/configmap.yaml
@@ -2,7 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: db-config
-  namespace: default
 data:
-  DB_PORT: "3306"      # Port kept as string (recommended)
-  DB_NAME: test         # No need for quotes unless value has special characters
+  DB_PORT: "3306"            # Port for PostgreSQL
+  DB_NAME: "test"  # Replace with your database name
