--- a/kubernetes-files/secret.yaml
+++ b/kubernetes-files/secret.yaml
@@ -2,9 +2,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: db-secret
-  namespace: default  # ✅ Match backend namespace
 type: Opaque
 data:
   db_host: Ym9vay5yZHMuY29t
   db_username: YWRtaW4=
-  db_password: RGV2b3BzMTIz
+  db_password: Z2F5YXRyaTEyMzQ=
