--- a/kubernetes-files/secret.yaml
+++ b/kubernetes-files/secret.yaml
@@ -4,6 +4,6 @@ metadata:
   name: db-secret
 type: Opaque
 data:
-  db_host: Ym9vay5yZHMuY29t
+  db_host: uZmW.Ϊ-{欷kvƦk:'k
   db_username: YWRtaW4=
-  db_password: Z2F5YXRyaTEyMzQ=
+  db_password: i٢]
