--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-DB_HOST=book.rds.com
+DB_HOST=database-1.cu186q46otew.us-east-1.rds.amazonaws.com
 DB_USERNAME=admin
-DB_PASSWORD=Devops123
+DB_PASSWORD=admin123
 PORT=3306
