--- a/kubernetes-files/backend-deployment.yaml
+++ b/kubernetes-files/backend-deployment.yaml
@@ -14,6 +14,23 @@ spec:
       labels:
         app: backend
     spec:
+      initContainers:
+      - name: wait-for-mysql
+        image: busybox:1.35
+        command:
+          - sh
+          - -c
+          - >
+            until nc -z -v -w30 $(DB_HOST) 3306; do
+              echo "Waiting for MySQL...";
+              sleep 5;
+            done;
+        env:
+        - name: DB_HOST
+          valueFrom:
+            secretKeyRef:
+              name: db-secret
+              key: db_host
       containers:
       - name: backend
         image: 342547628707.dkr.ecr.us-east-1.amazonaws.com/backend:10
@@ -46,4 +63,4 @@ spec:
               name: db-secret
               key: db_password
         - name: PORT
-          value: "80"  # Adjust if necessary
+          value: "80"
