--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-DB_HOST=database-1.cu186q46otew.us-east-1.rds.amazonaws.com
-DB_USERNAME=admin
-DB_PASSWORD=manasa123
+DB_HOST=mysql143.mysql.database.azure.com
+DB_USERNAME=manasa
+DB_PASSWORD=Rethvik@1432
 PORT=3306
