--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-DB_HOST=mysql143.mysql.database.azure.com
-DB_USERNAME=manasa
-DB_PASSWORD=Rethvik@1432
+DB_HOST=book-rds.cu186q46otew.us-east-1.rds.amazonaws.com
+DB_USERNAME=admin
+DB_PASSWORD=veeranarni
 PORT=3306
